# CSCE-435-Project1

./: README.md  Report.md
src/SampleSort/: CMakeLists.txt  build.sh  final_performance.ipynb  mpi.grace_job  sampleComplete.cpp  sampleSort.cpp  sequentialSample
src/SampleSort/Cali-Random/random/16pow/: p128-random-n4-t32-a65536.cali  p16-random-n1-t16-a65536.cali  p2-random-n1-t2-a65536.cali  p256-random-n8-t32-a65536.cali  p32-random-n1-t32-a65536.cali  p4-random-n1-t4-a65536.cali  p512-random-n16-t32-a65536.cali  p64-random-n2-t32-a65536.cali  p8-random-n1-t8-a65536.cali
src/SampleSort/Cali-Random/random/18pow/: p128-n4-t32-a262144.cali  p16-n1-t16-a262144.cali  p2-n1-t2-a262144.cali  p256-n8-t32-a262144.cali  p32-n1-t32-a262144.cali  p4-n1-t4-a262144.cali  p512-n16-t32-a262144.cali  p64-n2-t32-a262144.cali  p8-n1-t8-a262144.cali
src/SampleSort/Cali-Random/random/20pow/: p128-n4-t32-a1048576.cali  p16-n1-t16-a1048576.cali  p2-n1-t2-a1048576.cali  p256-n8-t32-a1048576.cali  p32-n1-t32-a1048576.cali  p4-n1-t4-a1048576.cali  p512-n16-t32-a1048576.cali  p64-n2-t32-a1048576.cali  p8-n1-t8-a1048576.cali
src/SampleSort/Cali-Random/random/22pow/: p128-n4-t32-a4194304.cali  p16-n1-t16-a4194304.cali  p2-n1-t2-a4194304.cali  p256-n8-t32-a4194304.cali  p32-n1-t32-a4194304.cali  p4-n1-t4-a4194304.cali  p64-n2-t32-a4194304.cali  p8-n1-t8-a4194304.cali
src/SampleSort/Cali-Random/random/24pow/: p128-n4-t32-a16777216.cali  p16-n1-t16-a16777216.cali  p2-n1-t2-a16777216.cali  p256-n8-t32-a16777216.cali  p32-n1-t32-a16777216.cali  p4-n1-t4-a16777216.cali  p64-n2-t32-a16777216.cali  p8-n1-t8-a16777216.cali
src/SampleSort/Cali-Random/randomTWO/16POW/: p1024-n32-t32-a65536.cali  p128-n4-t32-a65536.cali  p16-n1-t16-a65536.cali  p2-n1-t2-a65536.cali  (+6 more)
(+689 files in other folders)
